--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ai-sdk/groq": "^1.2.9",
     "ai": "^4.3.16",
+    "chalk": "^5.4.1",
     "dotenv": "^16.5.0",
     "groq-sdk": "^0.25.0"
   }
