--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@ai-sdk/groq": "^1.2.9",
+    "@inquirer/prompts": "^7.5.3",
     "ai": "^4.3.16",
     "chalk": "^5.4.1",
     "dotenv": "^16.5.0",
+    "figlet": "^1.8.1",
     "groq-sdk": "^0.25.0"
   }
 }
