--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/groq": "^1.2.9",
+    "@google/generative-ai": "^0.24.1",
     "@inquirer/prompts": "^7.5.3",
     "ai": "^4.3.16",
     "chalk": "^5.4.1",
@@ -18,7 +19,6 @@
     "figlet": "^1.8.1",
     "groq-sdk": "^0.25.0"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shivengoomer/vibeStudio.git"
