--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/groq": "^1.2.9",
+    "@google/genai": "^1.10.0",
     "@google/generative-ai": "^0.24.1",
     "@inquirer/prompts": "^7.5.3",
     "ai": "^4.3.16",
